<resources>
    <string name="app_name">Olymbus</string>
    <string name="your_schedule">ํYour Schedule</string>
    <string name="bus_time_table">Bus Time Table</string>
    <string name="detail_image">Image</string>
    <string name="description_image">Image</string>
    <string name="event_name">TextView</string>
    <string name="event_icon">Icon</string>
    <string name="d_swim1">Swimming 1 detail</string>
    <string name="d_swim2">Swimming 2 detail</string>
    <string name="seat">Image</string>
    <string name="seat_plan">Seat Plan</string>
    <string name="book">Book</string>
    <string name="back">Back</string>
    <string name="project_name">Your Journey \n to the Olympics</string>
    <string name="title1">Ceremony \n Opening Ceremony</string>
    <string name="detail1">VENUE: Olympic Stadium \n\n DATE: 24.07.20
        \n\n START TIME: 20:00 \n\n DURATION: 3.0 hrs \n\n Travel By Bus: 30 minutes</string>
    <string name="title2">Athletics \n Marathon Final \n Men</string>
    <string name="detail2">VENUE: Olympic Stadium \n\n DATE: 08.08.20
        \n\n START TIME: 19:00 \n\n DURATION: 3.20 hrs \n\n Travel By Bus: 30 minutes</string>
    <string name="title3">Swimming \n Preliminary Round \n Individuals</string>
    <string name="detail3">VENUE: Tokyo Aquatics Centre \n\n DATE: 26.07.20
        \n\n START TIME: 10:30 \n\n DURATION: 2.0 hrs \n\n Travel By Bus: 45 minutes</string>
    <string name="title4">Swimming \n Freestyle/Medley \n Individuals</string>
    <string name="detail4">VENUE: Tokyo Aquatics Centre \n\n DATE: 02.08.20
        \n\n START TIME: 10:30 \n\n DURATION: 2.0 hrs \n\n Travel By Bus: 45 minutes</string>
    <string name="title5">Diving \n Springboard Semifinal \n Men</string>
    <string name="detail5">VENUE: Tokyo Aquatics Centre \n\n DATE: 04.08.20
        \n\n START TIME: 10:00 \n\n DURATION: 1.30 hrs \n\n Travel By Bus: 45 minutes</string>
    <string name="title6">Diving \n Synchronized 3m Springboard Final \n Individuals</string>
    <string name="detail6">VENUE: Tokyo Aquatics Centre \n\n DATE: 26.07.20
        \n\n START TIME: 15:00 \n\n DURATION: 1.0 hrs \n\n Travel By Bus: 45 minutes</string>
    <string name="title7">Diving \n 10 m Platform Semifinal \n Men</string>
    <string name="detail7">VENUE: Tokyo Aquatics Centre \n\n DATE: 08.08.20
        \n\n START TIME: 11:00 \n\n DURATION: 1.30 hrs \n\n Travel By Bus: 45 minutes</string>
    <string name="title8">Weightlifting \n 40 kg Group B \n Women</string>
    <string name="detail8">VENUE: Tokyo International Forum \n\n DATE: 25.07.20
        \n\n START TIME: 13:20 \n\n DURATION: 1.50 hrs \n\n Travel By Bus: 23 minutes</string>
    <string name="title9">Weightlifting \n 40 kg Group B \n Women</string>
    <string name="detail9">VENUE: Tokyo International Forum \n\n DATE: 25.07.20
        \n\n START TIME: 13:20 \n\n DURATION: 1.50 hrs \n\n Travel By Bus: 23 minutes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
